--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format:cspell": "cspell **/*",
     "knip": "knip --config .github/knip.ts",
     "knip-ci": "knip --no-exit-code --reporter json --config .github/knip.ts",
-    "test": "jest --setupFiles dotenv/config --coverage",
+    "test": "jest --setupFiles dotenv/config --coverage --passWithNoTests",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "prepare": "husky"
