fix: force-include out dir for deploy

--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -67,5 +67,6 @@ jobs:
             --root="." \
             --token="$DENO_DEPLOY_TOKEN" \
             --include="." \
+            --include="out/**" \
             --include="deno.json" \
             "${excludes[@]}"
