--- a/.github/workflows/jest-testing.yml
+++ b/.github/workflows/jest-testing.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Add Jest Report to Summary
         if: always()
-        run: echo "$(cat test-dashboard.md)" >> $GITHUB_STEP_SUMMARY
+        run: cat test-dashboard.md >> "$GITHUB_STEP_SUMMARY"
