chore: add deploy debug fetch paths

--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -18,5 +18,9 @@ jobs:
         STATIC_DIR=out
       include: |
         out/**
+      debug_fetch_paths: |
+        /
+        /index.html
+      debug_fetch_fail: true
     secrets:
       DENO_DEPLOY_TOKEN: ${{ secrets.DENO_DEPLOY_TOKEN }}
