--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -19,5 +19,4 @@ jobs:
       include: |
         out/**
       debug_fetch_fail: true
-    secrets:
-      DENO_DEPLOY_TOKEN: ${{ secrets.DENO_DEPLOY_TOKEN }}
+    secrets: inherit
